--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 		  fjs.parentNode.insertBefore(js, fjs);
 		}(document, 'script', 'facebook-jssdk'));</script>
 		
+
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 header">
@@ -62,6 +63,7 @@
 						<img src="img/img01-thumb.jpg">
 						<div class="overlay">
 							<p><a href="img/img01.jpg" data-lightbox="g1">Opis slike</a></p>
+							<div class="fb-like" data-href="https://mibrezovec.github.io/zavrsniprojekt/" data-width="50" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-6 image-container">
