--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 					<div class="col-xs-12 col-sm-6 image-container">
 						<img src="img/img01-thumb.jpg">
 						<div class="overlay">
+							<div class="fb-like" data-href="https://mibrezovec.github.io/zavrsniprojekt/img/img01.jpg" data-width="50" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
 							<p><a href="img/img01.jpg" data-lightbox="g1">Opis slike</a></p>
 							<div class="fb-like" data-href="https://mibrezovec.github.io/zavrsniprojekt/" data-width="50" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="false"></div>
 						</div>
