--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112694267-1"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
-
-		  gtag('config', 'UA-112694267-1');
-		</script>
-
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Ime Prezime - My Portfolio</title>
+		<title>Miriam Brezovec - Portfolio</title>
 		<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link href="lightbox/css/lightbox.css" rel="stylesheet">		
 		<link href="socicon/style.css" rel="stylesheet">
@@ -25,73 +15,63 @@
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 	</head>
-	<body>
-		<div id="fb-root"></div>
-		<script>(function(d, s, id) {
-		  var js, fjs = d.getElementsByTagName(s)[0];
-		  if (d.getElementById(id)) return;
-		  js = d.createElement(s); js.id = id;
-		  js.src = 'https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.11';
-		  fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));</script>
-		
+	<body>		
+
+	<div class="topnav" id="myTopnav">
+			<a href="index.html">Naslovnica</a>
+				<a href="my_works.html">Radovi</a>
+				<a href="about_me.html">O meni</a>
+				<a href="contact.html">Kontakt</a>
+		    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+	</div>
 
 		<div class="container">
-			<div class="row">
 				<div class="col-xs-12 header">
-					<a href="index.html">My Portfolio</a>
-					<p>Welcome!</p>
+					<a href="index.html">Portfolio</a>
+					<p>Bok!	Moje ime je Miriam!</p>
 				</div>
-			</div>
-			<div class="row">
-			
-			<div class="hamburger">
-				<span class="glyphicon glyphicon-menu-hamburger"></span>
-			</div>
-			
-				<ul class="main-menu">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about_me.html">About me</a></li>
-					<li><a href="my_works.html">My works</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>			
 			<div class="section">
-				<h1>Featured works</h1>
+				<h1>Izdvojeno...</h1>
 				<div class="row gallery">
 					<div class="col-xs-12 col-sm-6 image-container">
-						<img src="img/img01-thumb.jpg">
+						<img src="img/2_thu.jpg">
 						<div class="overlay">
-							
-							<div class="fb-like" data-href="https://mibrezovec.github.io/zavrsniprojekt/img/img01.jpg" data-width="50" data-layout="button" data-action="like" data-size="small" data-show-faces="false" data-share="false"></div>
-							
-							<p><a href="img/img01.jpg" data-lightbox="g1">Opis slike</a></p>							
+							<p><a href="img/2.jpg" data-lightbox="g1">.ja</a></p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-6 image-container">
-						<img src="img/img02-thumb.jpg">
+						<img src="img/3_thu.jpg">
 						<div class="overlay">
-							<p><a href="img/img02.jpg" data-lightbox="g1">Opis slike</a></p>
+							<p><a href="img/3.jpg" data-lightbox="g1">.advent</a></p>
 						</div>
 					</div>
-					<div class="col-xs-12 col-sm-6">
-						<a href="img/1200x800.png"><img src="img/800x600.png"></a>
+					<div class="col-xs-12 col-sm-6 image-container">
+						<img src="img/4_thu.jpg">
+						<div class="overlay">
+							<p><a href="img/4.jpg" data-lightbox="g1">.advent</a></p>
+						</div>
 					</div>
-					<div class="col-xs-12 col-sm-6">
-						<a href="img/1200x800.png"><img src="img/800x600.png"></a>
+					<div class="col-xs-12 col-sm-6 image-container">
+						<img src="img/5_thu.jpg">
+						<div class="overlay">
+							<p><a href="img/5.jpg" data-lightbox="g1">.advent</a></p>
+						</div>
 					</div>
-					<div class="col-xs-12 col-sm-6">
-						<a href="img/1200x800.png"><img src="img/800x600.png"></a>
+					<div class="col-xs-12 col-sm-6 image-container">
+						<img src="img/6_thu.jpg">
+						<div class="overlay">
+							<p><a href="img/6.jpg" data-lightbox="g1">.portet</a></p>
+						</div>
 					</div>
-					<div class="col-xs-12 col-sm-6">
-						<a href="img/1200x800.png"><img src="img/800x600.png"></a>
+					<div class="col-xs-12 col-sm-6 image-container">
+						<img src="img/9_thu.jpg">
+						<div class="overlay">
+							<p><a href="img/9.png" data-lightbox="g1">.travnik</a></p>
+						</div>
 					</div>
 				</div>
-			</div>
-			
-			<div class="fb-comments" data-href="https://mibrezovec.github.io/zavrsniprojekt/" data-width="100%" data-numposts="20"></div>
-			
-			<div class="row contact-form">
+			</div>									
+			<div class="contact-form">
 				<h1>Quick contact</h1>
 				<form action="">					
 					<div class="form-group">
@@ -109,29 +89,33 @@
 					<button type="submit" class="btn btn-default">Send</button>
 				</form>
 			</div>
-			<div class="row footer">
-				<img src="img/footer_title.png">
+			<footer class="footer">
 				<div class="col-xs-12">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about_me.html">About me</a></li>
-						<li><a href="my_works.html">My works</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="index.html">Naslovnica</a></li>
+						<li><a href="my_works.html">Radovi</a></li>
+						<li><a href="about_me.html">O meni</a></li>
+						<li><a href="contact.html">Kontakt</a></li>
 					</ul>
 				</div>
-			</div>			
+				<p> Copyright © Miriam Brezovec </p>
+			</footer>
 		</div>			
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>		
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 		<script src="lightbox/js/lightbox.js"></script>
 		<script>
-			$('.hamburger').click(function() {
-				$('.main-menu').slideToggle();
-				});
+		function myFunction() {
+			var x = document.getElementById("myTopnav");
+			if (x.className === "topnav") {
+				x.className += " responsive";
+			} else {
+				x.className = "topnav";
+			}
+		}
 		</script>
-		
 		<!-- Go to www.addthis.com/dashboard to customize your tools -->
-<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a6a09fecf13c5f8"></script>
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a6a09fecf13c5f8"></script>
 
 	</body>
 </html>
