--- a/about_me.html
+++ b/about_me.html
@@ -16,110 +16,80 @@
 		<![endif]-->
 	</head>
 	<body>		
+		<div class="topnav" id="myTopnav">
+				<a href="index.html">Naslovnica</a>
+				<a href="my_works.html">Radovi</a>
+				<a href="about_me.html">O meni</a>
+				<a href="contact.html">Kontakt</a>
+		  <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+		</div>
+		
 		<div class="container">
+		
+
+		
 			<div class="row">
 				<div class="col-xs-12 header">
 					<a href="index.html">My Portfolio</a>
-					<p>About me</p>
+					<p>O meni</p>
 				</div>
 			</div>
-			<div class="row">
-				<ul class="main-menu">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about_me.html">About me</a></li>
-					<li><a href="my_works.html">My works</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>									
-			<div class="section">
+			
+		<div class="wrapper">		
+			<div class="row section">
 				<h1>My story</h1>
 				<div class="row about-me">
 					<div class="col-xs-12 col-sm-6">
-						<img src="img/img01-thumb.jpg">
+						<img src="img/2_thu.jpg">
 					</div>
 					<div class="col-xs-12 col-sm-6 about-me-text">						
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fringilla bibendum elit, dignissim placerat velit ultricies et. Nulla nec consequat orci. Sed vitae semper augue. Aliquam sed nunc mauris. Etiam nec rhoncus ex. Suspendisse potenti. Vivamus tempus ornare magna eget dignissim.</p>
 						<p>Maecenas imperdiet ex quis enim volutpat, sed bibendum neque maximus. Praesent auctor erat sit amet nisi posuere venenatis. Aenean tristique tempus imperdiet. Etiam accumsan, enim posuere ullamcorper lacinia, quam sem dapibus nulla, dignissim commodo risus mauris et neque. Aenean sit amet nunc id lorem ultrices efficitur. Aliquam sodales eros et nulla finibus fermentum. In vestibulum metus eu vestibulum luctus.</p>
 					</div>
 				</div>
-			</div>			
-			<div class="section">
-				<h1>My skills</h1>
-				<div class="row square-blocks">					
-					<div class="col-xs-3 light-gray-bg">
-						<p>
-							<a href="my_works.html#category1">Sketch/Figma</a>
-						</p>
-					</div>
-					<div class="col-xs-3 dark-gray-bg">
-						<p>
-							<a href="my_works.html#category1">HTML/CSS Coding</a>
-						</p>
-					</div>			
-					<div class="col-xs-3 light-gray-bg">
-						<p>
-							<a href="my_works.html#category1"><p>JS/PHP/SQL Programming</p></a>
-						</p>
-					</div>
-					<div class="col-xs-3 dark-gray-bg">
-						<p>
-							<a href="my_works.html#category3"><p>Adobe Photoshop</p></a>
-						</p>
-					</div>
-					<div class="col-xs-3 dark-gray-bg">
-						<p>
-							<a href="my_works.html#category3"><p>Adobe Illustrator</p></a>
-						</p>
-					</div>
-					<div class="col-xs-3 light-gray-bg">
-						<p>
-							<a href="my_works.html#category4"><p>Blender</p></a>
-						</p>
-					</div>
-					<div class="col-xs-3 dark-gray-bg">
-						<p>
-							<a href="my_works.html#category2"><p>Copywriting</p></a>
-						</p>
-					</div>
-					<div class="col-xs-3 light-gray-bg">
-						<p>
-							<a href="my_works.html#category3">Adobe InDesign</a>
-						</p>
-					</div>
-				</div>
-			</div>								
-			<div class="row contact-form">
-				<h1>Quick contact</h1>
-				<form action="">					
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Name">
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Subject">
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="E-mail">
-					</div>
-					<div class="form-group">
-						<textarea class="form-control" placeholder="Message"></textarea>
-					</div>				
-					<button type="submit" class="btn btn-default">Send</button>
-				</form>
-			</div>			
-			<div class="row footer">
-				<img src="img/footer_title.png">
+			</div>
+			
+		</div>
+			
+			<div class="row skills">
+				<p> Umijeća i resursi </p>
+					<ul>
+						<li>HTML/CSS | </li>
+						<li>Javascript | </li>
+						<li>Bootstrap | </li>
+						<li>QuirkTools | </li>
+						<li>Figma | </li>
+						<li>Illustrator | </li>
+						<li>Photoshop</li>
+					</ul>
+				
+			</div>
+			
+		
+			<footer class="footer">
 				<div class="col-xs-12">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about_me.html">About me</a></li>
-						<li><a href="my_works.html">My works</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="index.html">Naslovnica</a></li>
+						<li><a href="my_works.html">Radovi</a></li>
+						<li><a href="about_me.html">O meni</a></li>
+						<li><a href="contact.html">Kontakt</a></li>
 					</ul>
 				</div>
-			</div>			
+				<p> Copyright © Miriam Brezovec</p>
+			</footer>
 		</div>			
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>		
 		<script src="bootstrap/js/bootstrap.min.js"></script>
 		<script src="lightbox/js/lightbox.js"></script>
+		<script>
+		function myFunction() {
+			var x = document.getElementById("myTopnav");
+			if (x.className === "topnav") {
+				x.className += " responsive";
+			} else {
+				x.className = "topnav";
+			}
+		}
+		</script>
 	</body>
 </html>
