--- a/my_works.html
+++ b/my_works.html
@@ -17,6 +17,15 @@
 		<![endif]-->
 	</head>
 	<body>		
+	
+	<div class="topnav" id="myTopnav">
+			<a href="index.html">Naslovnica</a>
+			<a href="my_works.html">Radovi</a>
+			<a href="about_me.html">O meni</a>
+			<a href="contact.html">Kontakt</a>
+		    <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
+	</div>
+	
 		<div class="container">
 			<div class="row">
 				<div class="col-xs-12 header">
@@ -24,18 +33,11 @@
 					<p>My works</p>
 				</div>
 			</div>
-			<div class="row">
-				<ul class="main-menu">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="about_me.html">About me</a></li>
-					<li><a href="my_works.html">My works</a></li>
-					<li><a href="contact.html">Contact</a></li>
-				</ul>
-			</div>
+			<div class="wrapper">
 			<div class="section">
-				<h1>Bootstrap Carousel</h1>
+				<h1>Fotografija</h1>
 				<div class="row gallery">
-					<div class="col-xs-12">
+					<div class="col-xs-8">
 						<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 							<!-- Indicators -->
 							<ol class="carousel-indicators">
@@ -48,27 +50,27 @@
 							<!-- Wrapper for slides -->
 							<div class="carousel-inner" role="listbox">
 								<div class="item active">
-									<img src="img/carousel1.jpg" alt="Prva slika">
+									<img src="img/3.jpg" alt="Prva slika">
 									<div class="carousel-caption">
-										Opis prve slike
+										Advent u Grazu
 									</div>
 								</div>
 								<div class="item">
-									<img src="img/carousel2.jpg" alt="Druga slika">
+									<img src="img/4.jpg" alt="Druga slika">
 									<div class="carousel-caption">
-										Opis druge slike
+										Advent u Grazu
 									</div>
 								</div>
 								<div class="item">
-									<img src="img/carousel3.jpg" alt="Treća slika">
+									<img src="img/6.jpg" alt="Treća slika">
 									<div class="carousel-caption">
-										Opis treće slike
+										Fotografija - vježbe
 									</div>
 								</div>
 								<div class="item">
-									<img src="img/carousel4.jpg" alt="Četvrta slika">
+									<img src="img/7.jpg" alt="Četvrta slika">
 									<div class="carousel-caption">
-										Opis četvrte slike
+										Fotografija - vježbe
 									</div>
 								</div>
 							</div>
@@ -86,52 +88,26 @@
 					</div>
 				</div>
 			</div>
-			<div class="section">
-				<h1>Vegas Slideshow</h1>
-				<div class="row gallery">
-					<div class="col-xs-12" id="vegas"></div>
-				</div>
 			</div>
-			<a id="category1"></a>
-			<div class="section">
-				<h1>Category #1</h1>
-				<div class="row gallery">
-					<div class="col-xs-12 col-sm-6 image-container">
-						<img src="img/img01-thumb.jpg">
-						<div class="overlay">
-							<p><a href="img/img01.jpg" data-lightbox="g1">Opis slike</a></p>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-6 image-container">
-						<img src="img/img02-thumb.jpg">
-						<div class="overlay">
-							<p><a href="img/img02.jpg" data-lightbox="g1">Opis slike</a></p>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-6">
-						<a href="img/1200x800.png"><img src="img/800x600.png"></a>
-					</div>
-					<div class="col-xs-12 col-sm-6">
-						<a href="img/1200x800.png"><img src="img/800x600.png"></a>
-					</div>
-				</div>
-			</div>
+			<div class="wrapper">
 			<a id="category2"></a>
 			<div class="section">
 				<h1>Category #2</h1>
 				<div class="row article">
 					<div class="col-xs-12 col-sm-6">
-						<img src="img/img01-thumb.jpg">
+						<img src="img/10.jpg">
 					</div>
+					<div class="wrapper">
 					<div class="col-xs-12 col-sm-6 article-text">
 						<h1>Article #1</h1>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed fringilla bibendum elit, dignissim placerat velit ultricies et. Nulla nec consequat orci. Sed vitae semper augue. Aliquam sed nunc mauris. Etiam nec rhoncus ex. Suspendisse potenti. Vivamus tempus ornare magna eget dignissim.</p>
 						<p>Maecenas imperdiet ex quis enim volutpat, sed bibendum neque maximus. Praesent auctor erat sit amet nisi posuere venenatis. Aenean tristique tempus imperdiet. Etiam accumsan, enim posuere ullamcorper lacinia, quam sem dapibus nulla, dignissim commodo risus mauris et neque. Aenean sit amet nunc id lorem ultrices efficitur. Aliquam sodales eros et nulla finibus fermentum. In vestibulum metus eu vestibulum luctus.</p>
 					</div>
+					</div>
 				</div>
 				<div class="row article">
 					<div class="col-xs-12 col-sm-6">
-						<img src="img/img02-thumb.jpg">
+						<img src="img/11.jpg">
 					</div>
 					<div class="col-xs-12 col-sm-6 article-text">
 						<h1>Article #2</h1>
@@ -139,72 +115,23 @@
 						<p>Maecenas imperdiet ex quis enim volutpat, sed bibendum neque maximus. Praesent auctor erat sit amet nisi posuere venenatis. Aenean tristique tempus imperdiet. Etiam accumsan, enim posuere ullamcorper lacinia, quam sem dapibus nulla, dignissim commodo risus mauris et neque. Aenean sit amet nunc id lorem ultrices efficitur. Aliquam sodales eros et nulla finibus fermentum. In vestibulum metus eu vestibulum luctus.</p>
 					</div>
 				</div>
-			</div>			
-			<a id="category3"></a>
-			<div class="section">
-				<h1>Category #3</h1>
-				<div class="row gallery">
-					<div class="col-xs-12 col-sm-6 image-container">
-						<img src="img/img01-thumb.jpg">
-						<div class="overlay">
-							<p><a href="img/img01.jpg" data-lightbox="g1">Opis slike</a></p>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-6 image-container">
-						<img src="img/img02-thumb.jpg">
-						<div class="overlay">
-							<p><a href="img/img02.jpg" data-lightbox="g1">Opis slike</a></p>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-6">
-						<a href="img/1200x800.png"><img src="img/800x600.png"></a>
-					</div>
-					<div class="col-xs-12 col-sm-6">
-						<a href="img/1200x800.png"><img src="img/800x600.png"></a>
-					</div>
-				</div>
+			</div>	
 			</div>
-			<a id="category4"></a>
-			<div class="section">
-				<h1>Category #4</h1>
-				<div class="row gallery">
-					<div class="col-xs-12 col-sm-6">
-						<iframe width="100%" height="315" src="https://www.youtube.com/embed/hc-bBGML0q4?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-					</div>
-					<div class="col-xs-12 col-sm-6">
-						<iframe width="100%" height="315" src="https://www.youtube.com/embed/ttKUzSyo27M?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-					</div>
-				</div>
-			</div>			
-			<div class="row contact-form">
-				<h1>Quick contact</h1>
-				<form action="">					
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Name">
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Subject">
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="E-mail">
-					</div>
-					<div class="form-group">
-						<textarea class="form-control" placeholder="Message"></textarea>
-					</div>				
-					<button type="submit" class="btn btn-default">Send</button>
-				</form>
-			</div>			
-			<div class="row footer">
-				<img src="img/footer_title.png">
+			
+		
+						
+			<footer class="footer">
 				<div class="col-xs-12">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about_me.html">About me</a></li>
-						<li><a href="my_works.html">My works</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="index.html">Naslovnica</a></li>
+						<li><a href="my_works.html">Radovi</a></li>
+						<li><a href="about_me.html">O meni</a></li>
+						
+						<li><a href="contact.html">Kontakt</a></li>
 					</ul>
 				</div>
-			</div>			
+				<p> Copyright © Miriam Brezovec</p>
+			</footer>			
 		</div>			
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>		
 		<script src="bootstrap/js/bootstrap.min.js"></script>
@@ -219,6 +146,16 @@
 					{ src: "img/vegas4.jpg" }
 				]
 			});			
+		</script>
+		<script>
+		function myFunction() {
+			var x = document.getElementById("myTopnav");
+			if (x.className === "topnav") {
+				x.className += " responsive";
+			} else {
+				x.className = "topnav";
+			}
+		}
 		</script>
 	</body>
 </html>
