--- a/my_works.html
+++ b/my_works.html
@@ -95,7 +95,7 @@
 				<h1>Category #2</h1>
 				<div class="row article">
 					<div class="col-xs-12 col-sm-6">
-						<img src="img/10.jpg">
+						<img src="img/10.JPG">
 					</div>
 					<div class="wrapper">
 					<div class="col-xs-12 col-sm-6 article-text">
@@ -107,7 +107,7 @@
 				</div>
 				<div class="row article">
 					<div class="col-xs-12 col-sm-6">
-						<img src="img/11.jpg">
+						<img src="img/11.JPG">
 					</div>
 					<div class="col-xs-12 col-sm-6 article-text">
 						<h1>Article #2</h1>
