--- a/contact.html
+++ b/contact.html
@@ -33,67 +33,7 @@
 				</div>
 			</div>
 		
-			<div class="section">
-				<h1>Social media</h1>
-				<div class="row square-blocks">
-					<div class="col-sm-6 col-md-3 light-gray-bg">
-						<p>
-							<a href="http://www.facebook.com" target="_blank">
-								<span class="socicon-facebook"></span>
-							</a>
-						</p>
-					</div>
-					<div class="col-sm-6 col-md-3 dark-gray-bg">
-						<p>
-							<a href="http://www.twitter.com" target="_blank">
-								<span class="socicon-twitter"></span>
-							</a>
-						</p>
-					</div>
-					<div class="col-sm-6 col-md-3 light-gray-bg">
-						<p>
-							<a href="http://www.instagram.com" target="_blank">
-								<span class="socicon-instagram"></span>
-							</a>
-						</p>
-					</div>
-					<div class="col-sm-6 col-md-3 dark-gray-bg">
-						<p>
-							<a href="http://plus.google.com" target="_blank">
-								<span class="socicon-googleplus"></span>
-							</a>
-						</p>
-					</div>
-					<div class="col-sm-6 col-md-3 dark-gray-bg">
-						<p>
-							<a href="http://www.dribbble.com" target="_blank">
-								<span class="socicon-dribbble"></span>
-							</a>
-						</p>
-					</div>
-					<div class="col-sm-6 col-md-3 light-gray-bg">
-						<p>
-							<a href="http://www.behance.com" target="_blank">
-								<span class="socicon-behance"></span>
-							</a>
-						</p>
-					</div>
-					<div class="col-sm-6 col-md-3 dark-gray-bg">
-						<p>
-							<a href="http://www.linkedin.com" target="_blank">
-								<span class="socicon-linkedin"></span>
-							</a>
-						</p>
-					</div>
-					<div class="col-sm-6 col-md-3 light-gray-bg">
-						<p>
-							<a href="http://www.vimeo.com" target="_blank">
-								<span class="socicon-vimeo"></span>
-							</a>
-						</p>
-					</div>
-				</div>
-			</div>						
+					
 			<div class="row contact-form">
 				<h1>Quick contact</h1>
 				<form action="">					
@@ -137,5 +77,6 @@
 			}
 		}
 		</script>
+		<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a6a09fecf13c5f8"></script>
 	</body>
 </html>
